[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/Nova_Round/NovaRound-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/menu_bgs/Cave_(102637069).jpeg" type="Texture" id=2]
[ext_resource path="res://mainmenu.gd" type="Script" id=3]
[ext_resource path="res://About.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/intro.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 2048, 1365 )
expand_margin_left = 600.0
expand_margin_right = 600.0
expand_margin_top = 300.0
expand_margin_bottom = 300.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color( 0.509804, 0.486275, 0.533333, 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.141176, 0.129412, 0.129412, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.133333, 0.392157, 0.246569, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.94902, 0.533333, 0.984314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.34902, 0.392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.105882, 0.682353, 0.709804, 1 )
shadow_size = 2

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.041
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.6
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -223.0
margin_top = 108.0
margin_right = 223.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 4 )
text = "Math a Maze"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -33.0
margin_right = 115.0
margin_bottom = 145.0
custom_constants/separation = 18

[node name="AboutButton" type="Button" parent="VBoxContainer"]
margin_right = 230.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.745098, 0.905882, 0.901961, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "ABOUT"

[node name="AudioButton" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 230.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.745098, 0.905882, 0.901961, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "AUDIO"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 230.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.745098, 0.905882, 0.901961, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "CONTINUE"

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 230.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.745098, 0.905882, 0.901961, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "START"

[node name="VSplitContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -68.0
margin_right = -50.0

[node name="Label2" type="Label" parent="VSplitContainer"]
margin_top = 27.0
margin_right = 700.0
margin_bottom = 41.0
text = "Steam Ice Edu"

[node name="Label3" type="Label" parent="VSplitContainer"]
margin_top = 27.0
margin_right = 700.0
margin_bottom = 41.0
text = "Ver: 0.0.0.1"
align = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="About" parent="." instance=ExtResource( 4 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AudioButton" to="." method="_on_AudioButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
